Add own post in dashboard

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "loofow",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Looking for what?",
     "keywords": [
         "framework",
         "laravel"
